--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 html, body {
     height: 100%;
-    background: linear-gradient(to bottom right, var(--secondary), var(--primary));
+    background: /*linear-gradient(to bottom right, var(--secondary), var(--primary));*/ black;
     padding: none;
     overflow: hidden;
 }
