--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Average&family=Darker+Grotesque:wght@500&family=Jost&display=swap');
 
 :root {
-    --primary: #44CF6C;
+    --primary: #16e896;
     --secondary: #54dbc0;
     --tertiary: #EE4266;
     --quaternary: white;
+    --font1: 'Darker Grotesque', sans-serif;
+    --font2: 'Average', serif;
+    --font3: 'Jost', sans-serif;
 }
 
 html, body {
@@ -22,12 +25,12 @@ div {
 
 h1 {
     text-align: center;
-    font-size: 20pt;
+    font-size: 32pt;
     color: var(--quaternary);
 }
 
 p {
-    font-size: 14pt;
+    font-size: 22pt;
 }
 
 img {
@@ -38,8 +41,8 @@ img {
 
 svg {
     padding: 10px 10px 10px 10px;
-    width: 60px;
-    height: 60px;
+    width: 70px;
+    height: 70px;
     fill: var(--quaternary);
     transition: 0.15s;
 }
@@ -47,12 +50,12 @@ svg {
 a {
     text-decoration: none;
     color: var(--quaternary);
-    font-family: 'Quicksand', sans-serif;
-    font-size: 14pt;
+    font-family: var(--font1);
+    font-size: 22pt;
 }
 
 a:hover {
-    color: var(--tertiary);
+    color: var(--primary);
     text-decoration: none;
 }
 
@@ -60,7 +63,6 @@ a:visited {
     text-decoration: none;
     color: var(--quaternary);
 }
-
 
 .main {
     text-align: center;
@@ -74,29 +76,16 @@ a:visited {
     padding: 10px 10px 10px 10px;
 }
 
-.d-grid {
-    padding: 10px 10px 10px 10px;
-}
-
-.btn {
-    color: var(--quaternary);
-    border-color: var(--quaternary);
-    border: 3px solid var(--quaternary);
-    border-radius: 50px 50px 50px 50px;
-}
-
-.btn:hover {
-    color: var(--quaternary);
-    background-color: var(--tertiary);
-    border: 3px solid transparent;
-}
-
 svg:hover {
-    fill: var(--tertiary);
+    fill: var(--primary);
 }
 
 .text {
     padding: 5px 5px 0px 5px;
     color: var(--quaternary);
-    font-family: 'Quicksand', sans-serif;
+    font-family: var(--font1);
+}
+
+.botpad {
+    padding-bottom: 10px;
 }
