--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Roboto&display=swap');
 
 /* Variable section */
@@ -169,3 +170,12 @@ svg {
     stroke-linejoin: round;
     stroke-miterlimit: 10;
 }
+
+
+/*
+@media screen and (orientation:portrait) { … }
+@media screen and (orientation:landscape) { … }
+If your design needs to be tweaked for different resolutions, you can even do that with a media tag like:
+
+@media (min-width:500px) and (max-width:900px) { … }
+*/
