--- a/css/styleA.css
+++ b/css/styleA.css
@@ -20,23 +20,17 @@
     
 }
 
-html {
-    height: 100%;
-    background: black;
-    padding: none;
-    overflow: hidden;
-}
-
-body {
+html, body {
     margin: 0;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: transparent;
     height: 100%;
+    width: 100%;
     background: black;
     padding: none;
     overflow: hidden;
     margin: 0;
-    height: 100vh;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,7 +44,7 @@ div {
 
 img {
     border-radius: 50%;
-    max-width: 25vh;
+    max-width: 90vh;
     width: 100%;
 }
 
@@ -89,7 +83,7 @@ p {
 }
 
 svg {
-    padding: 0.2vh 5vh 0.2vh 1.5vh;
+    padding: 1.5vh 5vh 1.5vh 3vh;
     width: 8vh;
     height: 8vh;
     fill: var(--tertiary);
@@ -99,18 +93,38 @@ svg {
 
 .main {
     display: flex;
-    text-align: center;
     justify-content: center;
-    height: 100%;
+    align-items: flex-start; 
+    flex-direction: column;
+    height: auto;
     width: 100%;
+    padding: 0; 
+    margin: 0; /* Ensure no margin adds space */
 }
 
 .contain {
     color: var(--tertiary);
     margin: auto;
-    /* padding: 10px 10px 10px 10px; */
-    max-width: 130vh;
+    max-width: 100vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 150vh; /* Keeps the width responsive */
+    box-sizing: border-box;
 }
+
+.card {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%; /* Fill the entire height of the container */
+    /* padding: 1.5vh; */
+    box-sizing: border-box;
+}
+
 
 /* col AND ROWS */
 .row:after {
@@ -120,7 +134,21 @@ svg {
 }
 
 .row {
-    margin: 1.5vh 1.5vh 1.5vh 1.5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1; /* Allow rows to equally distribute vertical space */
+    margin: 0; /* Remove margin to eliminate gaps */
+}
+
+.col25, .col33, .col50, .col66, .col75, .col80, .col20 {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    float: left;
 }
 
 /* For ALIGNING SVG AND TEXT SEPARATELY */
@@ -135,39 +163,27 @@ svg {
 }
 
 .col33 {
-    float: left;
     width: 33.33%;
-    padding: 0px;
 }  
 
 .col66 {
-    float: left;
     width: 66.66%;
-    padding: 0px;
 }  
 
 .col75 {
-    float: left;
     width: 75%;
-    padding: 0px;
 }  
 
 .col25 {
-    float: left;
     width: 25%;
-    padding: 0px;
 }  
 
 .col20 {
-    float: left;
     width: 20%;
-    padding: 0px;
 }  
 
 .col80 {
-    float: left;
     width: 80%;
-    padding: 0;
 }  
 
 /* custom SVG hover colours */
@@ -207,14 +223,6 @@ svg {
     stroke: var(--daa);
 }
 
-.card {
-    display: flex;
-    flex-direction: column;
-    padding: 1.5vh 1.5vh 1.5vh 1.5vh;
-    width: 100%;
-    height: 100%;
-}
-
 /* 
 class details
 .card -> for actual website content, the stuff that has all contact info and links
@@ -223,7 +231,7 @@ class details
 */
 
 /* PORTRAIT */
-@media screen and (max-aspect-ratio: 5/4) { 
+@media screen and (max-aspect-ratio: 3/2) { 
     /* CARD */
     .card {
         display: none;
@@ -293,7 +301,7 @@ class details
 }
 
 /* LANDSCAPE */
-@media screen and (min-aspect-ratio: 5/4) {
+@media screen and (min-aspect-ratio: 3/2) {
     .circle {
         display: none;
     }
@@ -332,11 +340,12 @@ class details
 }
 
 .link-item svg {
-    flex-shrink: 0; /* Prevents the SVG from shrinking */
+    flex-shrink: 0; 
 }
 
 .link-item span {
-    margin-left: auto; /* Pushes the text to the right */
+    margin-left: auto;
+    margin-right: 6vh;
 }
 
 /* END OF SVG AND TEXT ALIGN */
