--- a/css/styleA.css
+++ b/css/styleA.css
@@ -83,7 +83,7 @@ p {
 }
 
 svg {
-    padding: 1.5vh 5vh 1.5vh 3vh;
+    padding: 1.5vh 5vh 0.5vh 3vh;
     width: 8vh;
     height: 8vh;
     fill: var(--tertiary);
@@ -316,11 +316,12 @@ class details
 
 .cursor {
     width: 5vh;
-    height: 10vh;
+    height: 9vh;
     background-color: white;
     animation: blink 1s infinite;
     margin-left: 4vh;
     margin-right: 0;
+    margin-bottom: 2vh;
 }
 
 @keyframes blink {
