--- a/css/styleA.css
+++ b/css/styleA.css
@@ -83,7 +83,7 @@ p {
 }
 
 svg {
-    padding: 1.5vh 5vh 0.5vh 3vh;
+    padding: 10px 5vh 10px 3vh;
     width: 8vh;
     height: 8vh;
     fill: var(--tertiary);
