--- a/css/styleA.css
+++ b/css/styleA.css
@@ -64,6 +64,8 @@ a {
     font-family: var(--font1);
     font-size: 7vh;
     vertical-align: center;
+    padding: 0;
+    line-height: 1.1;
 }
 
 a:hover {
@@ -83,8 +85,8 @@ p {
 
 svg {
     /* padding: 5px 5vh 5px 3vh; */
-    width: 8vh;
-    height: 8vh;
+    width: 5vh;
+    height: 5vh;
     fill: var(--tertiary);
     transition: 0.15s;
     vertical-align: middle;
@@ -111,7 +113,7 @@ svg {
     justify-content: center;
     align-items: center;
     width: 100%;
-    max-width: 150vh; /* Keeps the width responsive */
+    max-width: 150vh;
     box-sizing: border-box;
     padding: 20px 0 20px 0;
 }
@@ -120,7 +122,7 @@ svg {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%; /* Fill the entire height of the container */
+    height: 100%;
     /* padding: 1.5vh; */
     box-sizing: border-box;
 }
@@ -137,8 +139,8 @@ svg {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 1; /* Allow rows to equally distribute vertical space */
-    margin: 0; /* Remove margin to eliminate gaps */
+    flex: 1; 
+    margin: 0; 
 }
 
 .col25, .col33, .col50, .col66, .col75, .col80, .col20 {
