--- a/css/styleA.css
+++ b/css/styleA.css
@@ -66,6 +66,9 @@ a {
     vertical-align: center;
     padding: 0;
     line-height: 1.1;
+    
+    margin: 0; /* Remove any default margin */
+    padding: 0; /* Remove any default padding */
 }
 
 a:hover {
@@ -349,6 +352,7 @@ class details
 .link-item span {
     margin-left: auto;
     margin-right: 6vh;
+    line-height: 1.1;
 }
 
 /* END OF SVG AND TEXT ALIGN */
