--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rokkitt&display=swap');
 
 /* Variable section */
 :root {
@@ -14,27 +14,27 @@
     --vax: #d454fb;
     --lance: #28a745;
     --daa: #EF6461;
-    --font1: 'Open Sans', sans-serif;
-    --font2: 'Roboto', sans-serif;
+    /* --font1: "Courier Prime", monospace; */
+    --font1: "Rokkitt", serif;
+
+    
 }
 
-html {
-    height: 100%;
-    background: black;
-    padding: none;
-    overflow: hidden;
-}
-
-body {
+html, body {
     margin: 0;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: transparent;
     height: 100%;
+    width: 100%;
     background: black;
     padding: none;
     overflow: hidden;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
 
 div {
     display: block;
@@ -43,31 +43,31 @@ div {
 }
 
 img {
-    /* padding: 5px 5px 5px 5px; */
     border-radius: 50%;
-    width: 160px;
+    width: 100%;
 }
-
-h1 {
+ 
+.heading1 {
     text-align: center;
-    font-size: 27px;
+    font-size: 12vh;
     color: var(--tertiary);
     margin-top: 0;
     margin-bottom: 0.5rem;
     font-weight: 500;
     line-height: 1.2;
+    font-family: var(--font1);
 }
 
 a {
     text-decoration: none;
     color: var(--tertiary);
     font-family: var(--font1);
-    font-size: 18px;
+    font-size: 8vh;
+    vertical-align: center;
 }
 
 a:hover {
     text-decoration: none;
-    color: #54dbc0;
 }
 
 a:visited {
@@ -82,101 +82,289 @@ p {
 }
 
 svg {
-    padding: 5px 5px 5px 5px;
-    width: 60px;
-    height: 60px;
+    padding: 5px 2vh 5px 3vh;
+    width: 7vh;
+    height: 7vh;
     fill: var(--tertiary);
     transition: 0.15s;
     vertical-align: middle;
-
 }
 
 .main {
     display: flex;
-    text-align: center;
-    height: 100%;
+    justify-content: center;
+    align-items: flex-start; 
+    flex-direction: column;
+    height: auto;
+    width: 100%;
+    padding: 0; 
+    margin: 0; /* Ensure no margin adds space */
 }
 
 .contain {
     color: var(--tertiary);
     margin: auto;
-    padding: 10px 10px 10px 10px;
+    max-width: 100vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 150vh;
+    box-sizing: border-box;
+    padding: 20px 0 20px 0;
 }
 
-.text {
-    padding: 5px 5px 5px 5px;
-    margin: 0;
-    color: var(--tertiary);
-    font-family: var(--font1);
-}
-
-.smalltext {
-    padding: 15px 5px 0px 5px;
-    margin: 0;
-    color: var(--tertiary);
-    font-family: var(--font1);
-}
-
-.botpad {
-    padding-bottom: 10px;
-}
-
-*, ::after, ::before {
+.card {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    /* padding: 1.5vh; */
     box-sizing: border-box;
 }
 
-/* custom SVG colours */
+
+/* col AND ROWS */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1; 
+    margin: 0; 
+}
+
+.col25, .col33, .col50, .col66, .col75, .col80, .col20 {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    float: left;
+}
+
+/* For ALIGNING SVG AND TEXT SEPARATELY */
+.col50 {
+    float: left;
+    width: 50%;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    border-left: 2px solid white; /* Adjust the width of the border as needed */
+    box-sizing: border-box;
+}
+
+.col33 {
+    width: 33.33%;
+}  
+
+.col66 {
+    width: 66.66%;
+}  
+
+.col75 {
+    width: 75%;
+}  
+
+.col25 {
+    width: 25%;
+}  
+
+.col20 {
+    width: 20%;
+}  
+
+.col80 {
+    width: 80%;
+}  
+
+/* custom SVG hover colours */
 .spoofy:hover {
     fill: var(--primary);
+    color: var(--primary);
 }
 
 .linkedin:hover {
     fill: var(--linkedin);
+    color: var(--linkedin);
 }
 
 .github:hover {
     fill: var(--github);
+    color: var(--github);
 }
 
 .insta:hover {
     fill: var(--insta);
+    color: var(--insta)
 }
 
 .steam:hover {
     fill: var(--steam);
+    color: var(--steam);
 }
 
 .bulb:hover {
     fill: var(--bulb);
+    color: var(--bulb);
 }
 
 .vax:hover {
     fill: var(--vax);
+    color: var(--vax);
 }
 
 .lance:hover {
     fill: var(--lance);
+    color: var(--lance);
 }
 
 .wave:hover {
     stroke: var(--daa);
+    color: var(--daa);
 }
 
-/* because the waveform svg cannot be filled */
 .wave {
     fill: none;
     stroke: #fff;
-    stroke-width: 2;
+    stroke-width: 2.5;
     stroke-linecap: round;
     stroke-linejoin: round;
     stroke-miterlimit: 10;
 }
+/* 
+class details
+.card -> for actual website content, the stuff that has all contact info and links
 
-
-/*
-@media screen and (orientation:portrait) { … }
-@media screen and (orientation:landscape) { … }
-If your design needs to be tweaked for different resolutions, you can even do that with a media tag like:
-
-@media (min-width:500px) and (max-width:900px) { … }
+.circle -> the circle animation that tells portait device users to rotate their device
 */
+
+/* PORTRAIT */
+@media screen and (max-aspect-ratio: 3/2) { 
+    /* CARD */
+    .card {
+        display: none;
+    }
+   
+    /* CIRCLE */
+    .circle { 
+        width: 100%;
+        overflow: hidden; 
+    }
+    
+    .circle text { 
+        font-family: 'Lora', serif;
+        font-size: 16px; 
+        font-weight: bold; 
+        fill:white;
+    }
+
+    .circle svg {         
+        vertical-align: middle;
+        width: 100%; 
+        height: 500px;
+    
+        -webkit-animation-name: rotate;
+           -moz-animation-name: rotate;
+            -ms-animation-name: rotate;
+             -o-animation-name: rotate;
+                animation-name: rotate;
+        -webkit-animation-duration: 10s;
+           -moz-animation-duration: 10s;
+            -ms-animation-duration: 10s;
+             -o-animation-duration: 10s;
+                animation-duration: 10s;
+        -webkit-animation-iteration-count: infinite;
+           -moz-animation-iteration-count: infinite;
+            -ms-animation-iteration-count: infinite;
+             -o-animation-iteration-count: infinite;
+                animation-iteration-count: infinite;
+        -webkit-animation-timing-function: linear;
+           -moz-animation-timing-function: linear;
+            -ms-animation-timing-function: linear;
+             -o-animation-timing-function: linear;
+                animation-timing-function: linear;
+    
+    }
+    
+    @-webkit-keyframes rotate {
+        from { -webkit-transform: rotate(0); }
+        to { -webkit-transform: rotate(360deg); }
+    }
+    @-moz-keyframes rotate {
+        from { -moz-transform: rotate(0); }
+        to { -moz-transform: rotate(360deg); }
+    }
+    @-ms-keyframes rotate {
+        from { -ms-transform: rotate(0); }
+        to { -ms-transform: rotate(360deg); }
+    }
+    @-o-keyframes rotate {
+        from { -o-transform: rotate(0); }
+        to { -o-transform: rotate(360deg); }
+    }
+    @keyframes rotate {
+        from { transform: rotate(0); }
+        to { transform: rotate(360deg); }
+    }    
+}
+
+/* LANDSCAPE */
+@media screen and (min-aspect-ratio: 3/2) {
+    .circle {
+        display: none;
+    }
+}
+
+/* Terminal animation */
+.terminal {
+    display: inline-flex;
+    align-items: center;
+}
+
+.cursor {
+    width: 5vh;
+    height: 9vh;
+    background-color: white;
+    animation: blink 1s infinite;
+    margin-left: 4vh;
+    margin-right: 0;
+    margin-bottom: 2vh;
+}
+
+@keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 0; }
+    100% { opacity: 1; }
+}
+/* END of terminal animation */
+
+/* For ALIGNING SVG AND TEXT SEPARATELY */
+.link-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    text-decoration: none;
+    color: inherit;
+}
+
+.link-item svg {
+    flex-shrink: 0;
+}
+
+.link-item span {
+    margin-left: auto;
+    margin-right: 6vh;
+    line-height: 1.1;
+}
+
+/* END OF SVG AND TEXT ALIGN */
