--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,7 @@ class details
 
     .circle svg {         
         vertical-align: middle;
+        margin: auto;
         width: 100%; 
         height: 500px;
     
